deploy/k8s/accounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-service
  namespace: finance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accounts-service
  template:
    metadata:
      labels:
        app: accounts-service
    spec:
      containers:
      - name: accounts-service
        image: acrfinanceportfolio123.azurecr.io/accounts-service:1.0
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
  namespace: finance
spec:
  selector:
    app: accounts-service
  ports:
  - port: 80
    targetPort: 8081
