deploy/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: finance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: acrfinanceportfolio123.azurecr.io/gateway-service:1.2
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: finance
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
  - port: 80
    targetPort: 8080
