deploy/k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  namespace: finance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      containers:
      - name: payments-service
        image: acrfinanceportfolio123.azurecr.io/payments-service:1.0
        ports:
        - containerPort: 8082
        readinessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: finance
spec:
  selector:
    app: payments-service
  ports:
  - port: 80
    targetPort: 8082
