deploy/k8s/transactions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-service
  namespace: finance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transactions-service
  template:
    metadata:
      labels:
        app: transactions-service
    spec:
      containers:
      - name: transactions-service
        image: acrfinanceportfolio123.azurecr.io/transactions-service:1.0
        ports:
        - containerPort: 8083
        readinessProbe:
          httpGet:
            path: /health
            port: 8083
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  namespace: finance
spec:
  selector:
    app: transactions-service
  ports:
  - port: 80
    targetPort: 8083
